[gd_scene load_steps=33 format=3 uid="uid://dhow5esn6x7rt"]

[ext_resource type="Script" path="res://entities/player/state_machine/player_state_machine.gd" id="1_dcopr"]
[ext_resource type="Script" path="res://entities/player/state_machine/player.gd" id="1_l4530"]
[ext_resource type="Resource" uid="uid://dvbrelm3gvn8b" path="res://entities/player/data/default.tres" id="2_h06d8"]
[ext_resource type="PackedScene" uid="uid://dp3hm754d5ple" path="res://resources/canvas_mod.tscn" id="2_hrds7"]
[ext_resource type="SpriteFrames" uid="uid://byt3hw2l4n5l5" path="res://entities/player/anim/oriette.tres" id="4_ct6su"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_idle_state.gd" id="4_tan8y"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_state.gd" id="5_8dkiu"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_run_state.gd" id="7_71xul"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_jump_state.gd" id="7_ofds0"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_in_air_state.gd" id="8_uctrm"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_land_state.gd" id="9_ok23f"]
[ext_resource type="PackedScene" uid="uid://b88d6031uj744" path="res://entities/player/state_machine/stomp_shockwave.tscn" id="11_euytq"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_dash_state.gd" id="12_5jbsb"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_wall_grab_state.gd" id="13_ckika"]
[ext_resource type="PackedScene" uid="uid://deim0qaglwinp" path="res://resources/particle_effects/dash_ghost.tscn" id="14_q528f"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_wall_jump_state.gd" id="14_umcf1"]
[ext_resource type="PackedScene" uid="uid://df28o2fggrbi0" path="res://entities/player/state_machine/dash_shockwave.tscn" id="15_jrri0"]
[ext_resource type="Script" path="res://resources/camera.gd" id="16_1amk7"]
[ext_resource type="Script" path="res://entities/player/state_machine/player_stomp_state.gd" id="16_hlspe"]
[ext_resource type="AudioStream" uid="uid://uq5et6s242vd" path="res://resources/audio/sfx/player/footsteps_run.wav" id="20_yffpo"]
[ext_resource type="AudioStream" uid="uid://cwsp84bs3pl3t" path="res://resources/audio/sfx/player/dash.wav" id="21_2m7ev"]
[ext_resource type="AudioStream" uid="uid://dnpsnujvbysq3" path="res://resources/audio/sfx/player/wall_grab.wav" id="22_vf16a"]
[ext_resource type="AudioStream" uid="uid://ds6q1gtu3k5od" path="res://resources/audio/sfx/player/land1.wav" id="23_qetra"]
[ext_resource type="AudioStream" uid="uid://dnv0cfvaki7r1" path="res://resources/audio/sfx/player/land2.wav" id="24_rkeo0"]
[ext_resource type="AudioStream" uid="uid://dd5e54lddsty0" path="res://resources/audio/sfx/player/land3.wav" id="25_8nt8j"]
[ext_resource type="AudioStream" uid="uid://cyhu3bovbds5j" path="res://resources/audio/sfx/player/jump1.wav" id="26_erhki"]
[ext_resource type="AudioStream" uid="uid://k64hklsvjtl" path="res://resources/audio/sfx/player/jump2.wav" id="27_e40n3"]
[ext_resource type="Script" path="res://ui/radar_2d.gd" id="28_tmfgi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnagu"]
size = Vector2(24, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07f6o"]
size = Vector2(22, 108)

[sub_resource type="Gradient" id="Gradient_fuufi"]
offsets = PackedFloat32Array(0, 0.738372)
colors = PackedColorArray(0.722433, 0.718803, 0.726663, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0ihpg"]
gradient = SubResource("Gradient_fuufi")
width = 880
height = 880
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("cast")]
light_mask = 2
visibility_layer = 2
z_index = 1
collision_layer = 2
collision_mask = 5
floor_stop_on_slope = false
floor_block_on_wall = false
platform_on_leave = 1
platform_floor_layers = 5
platform_wall_layers = 5
script = ExtResource("1_l4530")
cast = NodePath("ShapeCast2D")
canvas_mod_node = ExtResource("2_hrds7")
verbose = true
data = ExtResource("2_h06d8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nnagu")

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_07f6o")
target_position = Vector2(0, 0)
collision_mask = 5
collide_with_areas = true

[node name="PlayerAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.3, 0.3)
sprite_frames = ExtResource("4_ct6su")
animation = &"idle"
offset = Vector2(-40, -50)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("1_dcopr")
initial_state = NodePath("InAir")

[node name="PlayerState" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("5_8dkiu")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("4_tan8y")

[node name="Run" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("7_71xul")

[node name="Jump" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("7_ofds0")

[node name="InAir" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("8_uctrm")

[node name="Land" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("9_ok23f")
shockwave_scene = ExtResource("11_euytq")

[node name="Dash" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("12_5jbsb")
dash_ghost_node = ExtResource("14_q528f")
shockwave_scene = ExtResource("15_jrri0")

[node name="WallGrab" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("13_ckika")

[node name="WallJump" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("14_umcf1")

[node name="Stomp" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("16_hlspe")

[node name="CoyoteTime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
process_mode = 3
visibility_layer = 1048575
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.4
drag_right_margin = 0.15
drag_bottom_margin = 0.3
script = ExtResource("16_1amk7")
verbose = true

[node name="SFX" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AudioListener2D" type="AudioListener2D" parent="SFX"]
current = true

[node name="Run" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("20_yffpo")
volume_db = 9.11
pitch_scale = 1.23
bus = &"SFX"
area_mask = 2

[node name="Dash" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("21_2m7ev")
volume_db = 14.384
bus = &"SFX"
area_mask = 2

[node name="WallGrab" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("22_vf16a")
volume_db = 17.878
bus = &"SFX"
area_mask = 2

[node name="Land1" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("23_qetra")
volume_db = 17.421
bus = &"SFX"
area_mask = 2

[node name="Land2" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("24_rkeo0")
volume_db = 6.579
bus = &"SFX"
area_mask = 2

[node name="Land3" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("25_8nt8j")
volume_db = 14.676
bus = &"SFX"
area_mask = 2

[node name="Jump1" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("26_erhki")
volume_db = 24.0
bus = &"SFX"
area_mask = 2

[node name="Jump2" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("27_e40n3")
volume_db = 24.0
bus = &"SFX"
area_mask = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
visibility_layer = 2
range_layer_min = -30
shadow_color = Color(0, 0, 0, 0.72549)
texture = SubResource("GradientTexture2D_0ihpg")

[node name="RayCasts" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HeadBumpCheckFront" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(8, -56)
target_position = Vector2(0, -5)
collision_mask = 5

[node name="HeadBumpCheckBack" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(-8, -56)
target_position = Vector2(0, -5)
collision_mask = 5

[node name="GrabCheckTop" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(12, 5)
target_position = Vector2(3, 0)
collision_mask = 5

[node name="GrabCheckInsideTop" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(12, 17)
target_position = Vector2(3, 0)
collision_mask = 5

[node name="GrabCheckInsideBottom" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(12, 39)
target_position = Vector2(3, 0)
collision_mask = 5

[node name="GrabCheckBottom" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
position = Vector2(12, 51)
target_position = Vector2(3, 0)
collision_mask = 5

[node name="Radar2D" type="Node2D" parent="."]
script = ExtResource("28_tmfgi")
radar_active = true
pointer_margin = Vector2(25, 25)
